# A2.Saw

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/headers/: core.h  stdafx.h
Core/src/: core.cpp
PLACEHOLDER/headers/: mainwindow.h  stdafx.h
Saw/: CMakeLists.txt
Saw/headers/: mainwindow.h  stdafx.h
Saw/src/: mainwindow.cpp  mainwindow.ui
tests/: test.cpp
